# testi

./: AGENTS.md  Dockerfile  README.md  config.js  gui.py  main.py  monitor.js  package.json  pyproject.toml  settings.py  storage.py
.github/workflows/: ci.yml  pyinstaller_build.yml  test.yml
src/: websocket_client.py
src/hetzner_ws_monitor/: __init__.py  gui.py  main.py  websocket_client.py
tests/: test_gui.py  test_integration.py  test_main.py  test_settings.py  test_storage.py  test_token_header.py  test_websocket_client.py
