[project]
name = "testi"
version = "0.1.0"
dependencies = [
    "PySide6",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller",
]

[project.scripts]
monitor = "hetzner_ws_monitor.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
